# qwwad

./: .bzrignore  .clang-tidy  .gitignore  .gitmodules  .travis.yml  AUTHORS  CMakeLists.txt  ChangeLog  Makefile.am  NEWS  README  autogen.sh  changelog  config.h.cmake  configure.ac  control  copyright  qwwad.pc.cmake  qwwad.pc.in  rules
doc/: CMakeLists.txt  chargedensity.h2m  densityinput.h2m  dispersion_relation.h2m  dos.h2m  efiw.h2m  efkpsl.h2m  efpqw.h2m  efsqw.h2m  efss.h2m  efxv.h2m  find_heterostructure.h2m  find_poisson_potential.h2m  gde.h2m  hup.h2m  ivdb.h2m  pth.h2m  qwwad_charge_density.h2m  qwwad_density_of_states.h2m  qwwad_diffuse.h2m  qwwad_ef_band_edge.h2m  qwwad_ef_dispersion.h2m  qwwad_ef_donor_generic.h2m  qwwad_ef_donor_specific.h2m  qwwad_ef_exciton.h2m  qwwad_ef_generic.h2m  qwwad_ef_infinite_well.h2m  qwwad_ef_parabolic_well.h2m  qwwad_ef_plot.h2m  qwwad_ef_poeschl_teller.h2m  qwwad_ef_square_well.h2m  qwwad_ef_superlattice.h2m  qwwad_ef_zeeman.h2m  qwwad_fermi_distribution.h2m  qwwad_find_donor_state.h2m  qwwad_mesh.h2m  qwwad_poisson.h2m  qwwad_population_init.h2m  qwwad_spin_flip_raman.h2m  qwwad_tx_double_barrier.h2m  (+7 more)
examples/: CMakeLists.txt  README  template.sh
examples/carrier-scattering/: LO-phonon-LW-screen.sh  LO-phonon-Te-screen.sh  LO-phonon-avg.sh  LO-phonon.sh  ac-E-T.sh  ac-E-em-ab.sh  ac-Ek.sh  ac-T.sh  ado-LB-double-well.sh  ado-x-barrier.sh  ado-x-double-well.sh  ado-x-well.sh  cc-asymmetric.sh  cc-auger.sh  cc-avg-N.sh  cc-avg-T.sh  cc-avg.sh  cc-intra-N.sh  cc-intra-T.sh  cc-screening-N1.sh  cc-screening.sh  ifr-Delta.sh  ifr-Ek.sh  ifr-LW.sh  ifr-Lambda.sh  ifr-x-barrier.sh  imp-E.sh  imp-N.sh  imp-profiles-N.sh  imp-profiles.sh  imp-screening.sh  index
examples/diffusion/: concentration-dependent.agr  concentration-dependent.sh  constant-D-E-t.agr  constant-D.eps  constant-D.sh  constant-Dt.agr  constant-Dt.eps  constant-Dt.sh  constant-step.agr  constant-step.eps  constant-step.sh  delta-doping-E.agr  delta-doping-E.eps  delta-doping-vp.agr  delta-doping-vp.eps  delta-doping.sh  depth-dependent.agr  depth-dependent.eps  depth-dependent.sh  error-function.eps  error-function.sh  index  time-dependent.agr  time-dependent.eps  time-dependent.sh
examples/electron-transport/: E-F.eps  Ef.r  cc2111.r  cc2211.r  cc2221.r  cc3332.r  electron-transport.sh  sree-F.xmgr  v.r  wf_e3.r
examples/excitons/: finite-well.sh  index  infinite-well.sh  lambda-beta-map.sh  multiple-qw-wf.sh  multiple-qw.sh  p-vs-a.sh
examples/impurities/: E-1s-2s.sh  E-binding-2D-ED0.eps  E-binding-2D.eps  E-binding-2D.sh  E-binding-3D-lambda.agr  E-binding-3D-lambda.eps  E-binding-3D-zoomed.agr  E-binding-3D.sh  E-binding-alternative.sh  E-donor-2D-binding.eps  E-donor-2D-lambda.agr  E-donor-2D-lambda.eps  E-donor-2D-total.agr  E-donor-2D.sh  E-donor-3D-vs-2D.agr  E-donor-3D-vs-2D.eps  E-donor-3D-vs-2D.sh  E-donor-3D-wf-vs-2D.eps  E-donor-3D-wf.agr  E-donor-3D.sh  E-donor-comparison.sh  E-donor-variable-zeta-lambda.agr  E-donor-variable.agr  E-donor-variable.sh  E-excited-states.sh  E-new-vs-old.sh  E-variational-2D.eps  E-variational-2D.sh  E-zeta.agr  E-zeta.eps  E-zeta.sh  index  spin-flip-raman.sh
examples/numerical-solutions/: bisect-example.agr  bisect-example.eps  bisect-example.sh  double-quantum-well-E-vs-LB.agr  double-quantum-well.sh  field-effect-variable-epsilon.agr  field-effect-variable-epsilon.eps  field-effect-variable-epsilon.sh  field-induced-anti-crossings-E-F.agr  field-induced-anti-crossings-E-F.eps  field-induced-anti-crossings.sh  high-electron-mobility-transistor-wf-I.agr  high-electron-mobility-transistor-wf-I.eps  high-electron-mobility-transistor.sh  index  modulation-doping-V.agr  modulation-doping.sh  multiple-qw-100-100.sh  multiple-qw-40-40-E-N.agr  multiple-qw-40-40-wf.eps  multiple-qw-40-40.sh  nonparabolic-dE-vs-width-inalgaas.agr  nonparabolic-dE-vs-width-inalgaas.eps  nonparabolic-dE-vs-width-inalgaas.sh  nonparabolic-dE-vs-width.agr  nonparabolic-dE-vs-width.eps  nonparabolic-dE-vs-width.sh  parabolic-well-E-10.sh  parabolic-well-energies.agr  parabolic-well-energies.eps  parabolic-well-solutions.agr  parabolic-well-solutions.eps  parabolic-well-solutions.sh  poeschl-teller-hole-V.eps  poeschl-teller-hole-convergence.sh  poeschl-teller-hole-vary-lambda.sh  poisson-schroedinger-V.eps  poisson-schroedinger-comp-E-I.agr  poisson-schroedinger-comp-E-I.eps  poisson-schroedinger-comp.sh  (+24 more)
examples/pseudopotential-het/: dot-array-transport.sh
examples/schroedinger-solutions/: CMakeLists.txt  density-of-states.sh  double-barrier-IV-temperature.sh  double-barrier-IV-width.eps  double-barrier-IV-width.sh  double-barrier-tx-height.sh  double-barrier-tx-width.sh  effective-mass-mismatch-E-L.agr  effective-mass-mismatch-E-L.eps  effective-mass-mismatch.sh  fermi-distribution-T-sweep.sh  fermi-distribution-concentration-sweep.sh  finite-well-matching.eps  finite-well-matching.sh  finite-well-wf.sh  finite-well-width.sh  index  infinite-SL-40-40-E-k.eps  infinite-SL-40-40-E-k.sh  infinite-SL-60-60-E-k.eps  infinite-SL-60-60-E-k.sh  infinite-SL-mass.sh  infinite-SL-miniband-width.eps  infinite-SL-miniband-width.sh  infinite-barrier-height-limit.eps  infinite-barrier-height-limit.sh  infinite-barrier-mass-limit.eps  infinite-barrier-mass-limit.sh  infinite-well-energy-vs-width.sh  infinite-well-wavefunctions.agr  infinite-well-wavefunctions.sh  landau-quantisation.sh  large-barrier-mass-wf.eps  large-barrier-mass-wf.sh  (+6 more)
gtest/: CMakeLists.txt
src/: CMakeLists.txt  Makefile.am  ado.cpp  bools.h  chargedensity.cpp  const.h  creaddata.cpp  creaddata.h  critical-thickness.cpp  cspd.awk  csss.c  cszb.c  d0-helpers.c  d0-helpers.h  d0.c  d02D.c  d02D.cpp  d03D.c  densityinput.cpp  dispersion_relation.cpp  dos-functions.cpp  dos-functions.h  dos.c  dos.cpp  double-barrier.cpp  double-barrier.h  dox.c  dox.h  ebe.c  ef-helpers.h  efcwire.c  efcwwf.c  effv.c  efiw.c  efiw.cpp  efiwire.c  efiwire.cpp  efkpsl.c  efkpsl.cpp  efmfv.c  (+216 more)
tests/: CMakeLists.txt  qwwad-schroedinger-infinite-well-tests.cpp  run-all-unit-tests.cpp  some_tests.cpp
(+2603 files in other folders)
